// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers basic reducers CLEAR_GRAPH 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_GRAPH_ERROR 1`] = `
Object {
  "error": "test",
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_GRAPH_LAYOUT 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "new layout",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_GRAPH_LOADING 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": true,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_MAX_NEIGHBORS 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 1000,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_ROOT_NODE 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {
    "id": 1,
    "label": "test",
    "size": 1,
    "x": 0,
    "y": 0,
  },
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_SELECTED_NODE 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {
      "label": "new selected node",
    },
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_SELECTED_NODE_INFO 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": undefined,
    "error": undefined,
    "img": undefined,
    "loading": undefined,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers basic reducers SET_TARGET_NODE 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {
    "label": "new target node",
  },
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH adds new values 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "size": 1,
        "value": "2",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH does not add duplicate edges or nodes 1`] = `
Object {
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
}
`;

exports[`reducers graph ADD_NEIGHBORS_TO_GRAPH merges new values with old 1`] = `
Object {
  "graph": Object {
    "edges": Array [
      Object {
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
      Object {
        "id": "1->-->--3",
        "source": 1,
        "target": 3,
      },
    ],
    "nodes": Array [
      Object {
        "id": 2,
        "value": "2",
      },
      Object {
        "id": 3,
        "size": 1,
        "value": "3",
      },
      Object {
        "id": 1,
        "value": "1",
      },
    ],
  },
}
`;

exports[`reducers graph SET_GRAPH_PATH adds normal path 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [
      Object {
        "color": "gray",
        "id": "1->-->--2",
        "source": 1,
        "target": 2,
      },
      Object {
        "color": "gray",
        "id": "2->-->--3",
        "source": 2,
        "target": 3,
      },
    ],
    "nodes": Array [
      Object {
        "id": 1,
        "label": "1",
        "size": 1,
      },
      Object {
        "id": 2,
        "label": "2",
        "size": 1,
      },
      Object {
        "id": 3,
        "label": "3",
        "size": 1,
      },
    ],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;

exports[`reducers graph SET_GRAPH_PATH clears graph if it's already there 1`] = `
Object {
  "graph": Object {
    "edges": Array [],
    "nodes": Array [
      Object {
        "id": 1,
        "label": "1",
        "size": 1,
      },
    ],
  },
}
`;

exports[`reducers graph initializes with correct state 1`] = `
Object {
  "error": undefined,
  "graph": Object {
    "edges": Array [],
    "nodes": Array [],
  },
  "layout": "hierarchy",
  "loading": false,
  "maxNeighbors": 15,
  "rootNode": Object {},
  "selectedNode": Object {
    "description": "",
    "error": "",
    "img": "",
    "loading": true,
    "node": Object {},
  },
  "targetNode": Object {},
}
`;
